# zengine_rs

./: .env.example  .gitignore  Cargo.toml  rustfmt.toml
src/: main.rs
src/shaders/: shader.frag  shader.vert  triangle.vert
src/util/: file_utils.rs  mod.rs  string_utils.rs
