[package]
name = "zengine"
version = "0.1.0"
authors = ["Casey Bailey <SonicZentropy@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
fern = "0.5.9"
chrono = "0.4.10"
dotenv = "0.14.1"

image = "0.22"
winit = "0.20.0"
glsl-to-spirv = "0.1.7"

[dependencies.wgpu]
version = "0.4"
features = ["vulkan"]
